Image editor assertion when clicking the image selection dropdown #121069

Closed
opened 2024-04-25 10:53:50 +02:00 by Lukas Tönne · 3 comments
Member

Blender Version
Broken: 4.2
Worked: -

Short description of error
Assert fails when clicking the image selection button in the image editor (unreachable code).

Exact steps for others to reproduce the error
Open image editor.
Click the image selector button
image

It executes unreachable code in eevee_lightcache.cc
fa66b52d0a/source/blender/draw/engines/eevee/eevee_lightcache.cc (L575)

**Blender Version** Broken: 4.2 Worked: - **Short description of error** Assert fails when clicking the image selection button in the image editor (unreachable code). **Exact steps for others to reproduce the error** Open image editor. Click the image selector button ![image](/attachments/7ee19567-190a-459c-b458-98dfbdaec477) It executes unreachable code in `eevee_lightcache.cc` https://projects.blender.org/blender/blender/src/commit/fa66b52d0ae6f74386809cae2f7f7fd9fdfc4ca6/source/blender/draw/engines/eevee/eevee_lightcache.cc#L575
5.8 KiB
Lukas Tönne added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-04-25 10:53:51 +02:00
Member

yes, can confirm. Also noticed this when switched to material properties tab.

yes, can confirm. Also noticed this when switched to material properties tab.
Author
Member

Possibly same root cause as #120953

Possibly same root cause as #120953
Member

I don't think so. Was able to switch to gpv3 draw mode yesterday, today it's terminating in eevee_lightcache.cc :)
BLI_assert_unreachable is added in 15b9ae5436
@brecht ^

I don't think so. Was able to switch to gpv3 draw mode yesterday, today it's terminating in `eevee_lightcache.cc` :) `BLI_assert_unreachable` is added in 15b9ae54365e01ce17780ad0cae20e37cfcb2b34 @brecht ^
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-04-25 16:16:32 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#121069
No description provided.