Fix #121069: Crash loading EEVEE byte lightcache after recent refactor